--- a/src/index.scss
+++ b/src/index.scss
@@ -4,8 +4,8 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -34,21 +34,36 @@ body {
     background-color: #f7f8fc;
     height: 100%;
     min-height: calc(100vh - 65px);
-    ul {
+    &__content {
+      display: grid;
+      grid-template-rows: 5% 5% 5%;
       justify-content: center;
-      align-items: center;
-      margin: auto;
+      margin: 10% auto;
+      &__step {
+        display: flex;
+        gap: 16px;
+        min-width: 140px;
+      }
     }
   }
   &__content {
     margin-left: 96px;
     margin-top: 48px;
-    h2 {
-      font-size: 40px;
-      span {
-        color: #ef3340;
+    &__back {
+      display: flex;
+      gap: 16px;
+      cursor: pointer;
+    }
+    &__welcome {
+      margin-bottom: 44px;
+      h2 {
+        font-size: 40px;
+        span {
+          color: #ef3340;
+        }
       }
     }
+
     &__info {
       display: grid;
       grid-template-columns: 50% 50%;
@@ -62,16 +77,17 @@ body {
       width: 384px;
       &__text {
         justify-content: center;
-        margin: auto;
+        margin-top: 40px;
         padding-left: 32px;
-        padding-right: 32px;
+        margin-right: 32px;
+        max-width: 200px;
         p {
           font-size: 12px;
-          font-weight: 400;
+          font-weight: 200;
         }
         h3 {
           font-size: 20px;
-          font-weight: 400;
+          font-weight: 300;
         }
       }
       img {
@@ -93,19 +109,31 @@ body {
       }
     }
     &__extra {
-      &__input {
-        input[type="number"] {
-          -webkit-appearance: textfield;
-          -moz-appearance: textfield;
-          appearance: textfield;
+      display: flex;
+      gap:48px;
+      &__sum {
+        p {
+          font-size: 16px;
+          font-weight: 400;
         }
+        div {
+          display: flex;
+          gap: 8px;
+          span {
+            font-size: 12px;
+            font-weight: 200;
+          }
+        }
+      }
+      &__input {
 
         input[type="number"]::-webkit-inner-spin-button,
         input[type="number"]::-webkit-outer-spin-button {
           -webkit-appearance: none;
         }
 
-        border: 2px solid #ddd;
+        border: 1px solid #C5CBE0;
+        border-radius: 8px;
         display: inline-flex;
 
         box-sizing: border-box;
@@ -113,11 +141,10 @@ body {
         button {
           outline: none;
           -webkit-appearance: none;
-          background-color: #eeeeee;
           border: none;
           align-items: center;
           justify-content: center;
-          width: 2.5rem;
+          width: 40px;
           cursor: pointer;
           margin: 0;
           position: relative;
@@ -131,7 +158,7 @@ body {
           content: "";
           width: 0.5rem;
           height: 2px;
-          background-color: #212121;
+          background-color: #6F7DFF;
           transform: translate(-50%, -50%);
         }
         button.plus:after {
@@ -146,8 +173,91 @@ body {
           text-align: center;
           outline: none;
         }
-        border: solid #c2c4c6;
-        border-width: 2px;
+      }
+    }
+    &__cover{
+      h3{
+        font-size: 20px;
+        font-weight: 400;
+      }
+      &-tab {
+        font-size: 0;
+        border-radius: 3px;
+        input {
+          display: none;
+          &:checked + label {
+            background: #fff;
+            color: red;
+          }
+          @for $i from 1 through 4 {
+            &#tab#{$i}:checked {
+              ~ .tab-container #c#{$i} {
+                opacity: 1;
+              }
+            }
+          }
+        }
+        label {
+          display: inline-block;
+          font-size: 10px;
+          width: 33%;
+          text-align: center;
+          background: #fff;
+          color: #494F66;
+          position: relative;
+          transition: 0.25s background ease;
+          cursor: pointer;
+          text-transform: uppercase;
+          margin-top: 24px;
+          &::after {
+            content: "";
+            height: 2px;
+            width: 100%;
+            display: block;
+            color: #EF3340;
+            background: #EF3340;
+            bottom: 0;
+            opacity: 0;
+            left: 0;
+            margin-top: 24px;
+            transition: 0.25s ease;
+          }
+          &:hover::after {
+            opacity: 1;
+          }
+        }
+        .tab-line {
+          height: 2px;
+          background: #ef3340;
+          top: 34px;
+          left: 0;
+          transition: 0.25s ease;
+          width: 33%;
+        }
+        .tab-container {
+          background: #fff;
+          position: relative;
+          font-size: 16px;
+          &__content {
+            padding: 10px;
+            width: 100%;
+            top: 0;
+            opacity: 0;
+            transition: 0.25s ease;
+            color: #333;
+            h3 {
+              font-weight: 200;
+              margin: 10px 0;
+            }
+            p, i {
+              font-size: 13px;
+            }
+            span{
+              color:#6F7DFF;
+              font-weight: 400;
+            }
+          }
+        }
       }
     }
   }
@@ -167,7 +277,6 @@ body {
     }
   }
 }
-
 
 $color-gray: #494f66;
 $color-red: #ef3340;
@@ -254,8 +363,8 @@ $color-acian: #6f7dff;
       display: flex;
       flex-direction: column;
       margin: auto;
+      margin-top: 5%;
       margin-left: 224px;
-
       &__title {
         text-align: left;
         font-size: 28px;
@@ -372,14 +481,14 @@ $color-acian: #6f7dff;
           margin-left: 20px;
           font-weight: 300;
         }
-        &__highlight{
+        &__highlight {
           font-size: 10px;
         }
-        &__title{
+        &__title {
           font-size: 28px;
         }
-        &__paragraph{
-          font-size: 14px
+        &__paragraph {
+          font-size: 14px;
         }
       }
     }
@@ -423,7 +532,7 @@ $color-acian: #6f7dff;
     // font-family: $body-font-family;
     border-radius: 4px 0 0 4px;
     cursor: pointer;
-    p{
+    p {
       margin-right: 9px;
     }
   }
@@ -478,9 +587,15 @@ $color-acian: #6f7dff;
   }
 }
 
-.input{
+.input {
   padding: 16px !important;
   border: 1px solid #c5cbe0;
   border-radius: 4px;
   width: 100%;
+}
+
+.line{
+  width: 384px;
+  border: 1px solid #E4E8F7;
+  margin: 44px 0
 }
